--- a/css/themes/indigo-white.css
+++ b/css/themes/indigo-white.css
@@ -1,8 +1,28 @@
 /* Theme */
 
 main {
-	background: #303F9F;
-	color: #FAFAFA;
+	background: linear-gradient(132deg, #181818, #293090);
+	background-size: 200% 200%;
+	
+	-webkit-animation: AnimationName 0s ease infinite;
+	-moz-animation: AnimationName 0s ease infinite;
+	animation: AnimationName 0s ease infinite;
+	
+	@-webkit-keyframes AnimationName {
+		0%{background-position:17% 0%}
+		50%{background-position:84% 100%}
+		100%{background-position:17% 0%}
+	}
+	@-moz-keyframes AnimationName {
+		0%{background-position:17% 0%}
+		50%{background-position:84% 100%}
+		100%{background-position:17% 0%}
+	}
+	@keyframes AnimationName {
+		0%{background-position:17% 0%}
+		50%{background-position:84% 100%}
+		100%{background-position:17% 0%}
+	}
 }
 
 .icons-social a {
